<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/hotPink"
    tools:context=".FirstFragment">

    <androidx.cardview.widget.CardView
        android:layout_gravity="top|center"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="250dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ava"/>


    </androidx.cardview.widget.CardView>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lacey_fernandez"
        android:layout_gravity="top|center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="220dp"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="bottom"
        android:background="@color/beige"/>

    <LinearLayout
        android:layout_gravity="center|bottom"
        android:layout_width="360dp"
        android:layout_height="530dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/hotPink"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            />

        <EditText
            android:id="@+id/et_username"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/btn"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/enter_user_name"
            android:paddingStart="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textColor="@color/hotPink"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/btn"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/enter_email"
            android:paddingStart="20dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_send"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/btn"
            android:backgroundTint="@color/hotPink"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/send"
            android:textSize="22sp"
            android:textColor="@color/white"
            />



    </LinearLayout>

</FrameLayout>